style: fixed alignment in navbar

--- a/components/components.css
+++ b/components/components.css
@@ -41,7 +41,7 @@ body {
 	background-color: white;
 	width: 200px;
 	color: black;
-	text-align: left;
+	text-align: center;
 }
 
 /*alerts*/
